--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 32
-
     defaultConfig {
         applicationId "did.pinbraerts.market"
-        minSdkVersion 16
-        targetSdkVersion 32
+        minSdkVersion 21
+        compileSdk 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
@@ -34,7 +33,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
 
-tasks.withType(Test) {
+tasks.withType(Test).configureEach {
     useJUnitPlatform()
     jvmArgs '--enable-preview'
 }
